XMLHttpRequest: status and statusText throw DOM Exception 11 when the state is UNSENT or OPENED. https://bugs.webkit.org/show_bug.cgi?id=45994

Not reviewed.

Re-landing r161051 (originally by Ryosuke Niwa, reviewed by Alexey Proskuryakov)
since https://bugs.webkit.org/show_bug.cgi?id=126219 is no longer an issue.

Source/WebCore:

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::status):
(WebCore::XMLHttpRequest::statusText):
* xml/XMLHttpRequest.h:
* xml/XMLHttpRequest.idl:

LayoutTests:

* http/tests/xmlhttprequest/exceptions-expected.txt:
* http/tests/xmlhttprequest/exceptions.html:
* http/tests/xmlhttprequest/status-after-abort-expected.txt:
* http/tests/xmlhttprequest/zero-length-response-expected.txt:
* js/dom/dfg-custom-getter-throw-expected.txt:
* js/dom/script-tests/dfg-custom-getter-throw-inlined.js:
(foo):
(bar):
* js/dom/script-tests/dfg-custom-getter-throw.js:
(foo):
(bar):



Canonical link: https://commits.webkit.org/147866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165229 268f45cc-cd09-0410-ab3c-d52691b4dbfc